Campaign List Page Udates!

--- a/amardaan/templates/campaign_list.html
+++ b/amardaan/templates/campaign_list.html
@@ -13,15 +13,15 @@
         <div class="product-card">
             <div class="badge">Hot</div>
             <div class="product-tumb">
-                <img src="https://i.imgur.com/xdbHo4E.png" alt="">
+                <img class="product-image" src="../static/images/header-img-1.jpg" alt="">
             </div>
             <div class="product-details">
                 <span class="product-catagory">Women,bag</span>
-                <h4><a href="#">Women leather bag</a></h4>
+                <h4><a href="#">Run for Ratan</a></h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, possimus nostrum!</p>
                 <div class="product-bottom-details">
                     <div class="product-price">
-                        <small>$96.00</small>$230.99
+                        <small>৳ 96.00</small>৳ 230.99
                     </div>
                     <div class="product-links">
                         <a href=""><i class="fa fa-heart"></i></a>
@@ -33,15 +33,15 @@
         <div class="product-card">
             <div class="badge">Hot</div>
             <div class="product-tumb">
-                <img src="https://i.imgur.com/xdbHo4E.png" alt="">
+                <img src="../static/images/Mamun Formal Pic.png" alt="">
             </div>
             <div class="product-details">
                 <span class="product-catagory">Women,bag</span>
-                <h4><a href="#">Women leather bag</a></h4>
+                <h4><a href="#">Music for hunger</a></h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, possimus nostrum!</p>
                 <div class="product-bottom-details">
                     <div class="product-price">
-                        <small>$96.00</small>$230.99
+                        <small>৳ 96.00</small>৳ 230.99
                     </div>
                     <div class="product-links">
                         <a href=""><i class="fa fa-heart"></i></a>
@@ -53,15 +53,15 @@
         <div class="product-card">
             <div class="badge">Hot</div>
             <div class="product-tumb">
-                <img src="https://i.imgur.com/xdbHo4E.png" alt="">
+                <img src="../static/images/header-img-3.jpg" alt="">
             </div>
             <div class="product-details">
                 <span class="product-catagory">Women,bag</span>
-                <h4><a href="#">Women leather bag</a></h4>
+                <h4><a href="#">Project Trishna</a></h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, possimus nostrum!</p>
                 <div class="product-bottom-details">
                     <div class="product-price">
-                        <small>$96.00</small>$230.99
+                        <small>৳ 96.00</small>৳ 230.99
                     </div>
                     <div class="product-links">
                         <a href=""><i class="fa fa-heart"></i></a>
@@ -73,15 +73,15 @@
         <div class="product-card">
             <div class="badge">Hot</div>
             <div class="product-tumb">
-                <img src="https://i.imgur.com/xdbHo4E.png" alt="">
+                <img src="../static/images/header-img-4.jpg" alt="">
             </div>
             <div class="product-details">
                 <span class="product-catagory">Women,bag</span>
-                <h4><a href="#">Women leather bag</a></h4>
+                <h4><a href="#">Beach Island</a></h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, possimus nostrum!</p>
                 <div class="product-bottom-details">
                     <div class="product-price">
-                        <small>$96.00</small>$230.99
+                        <small>৳ 96.00</small>৳ 230.99
                     </div>
                     <div class="product-links">
                         <a href=""><i class="fa fa-heart"></i></a>
@@ -93,15 +93,15 @@
         <div class="product-card">
             <div class="badge">Hot</div>
             <div class="product-tumb">
-                <img src="https://i.imgur.com/xdbHo4E.png" alt="">
+                <img src="../static/images/header-img-5.jpg" alt="">
             </div>
             <div class="product-details">
-                <span class="product-catagory">Women,bag</span>
-                <h4><a href="#">Women leather bag</a></h4>
+                <span class="product-catagory">Ashulia, Health</span>
+                <h4><a href="#">Corona Relief: Jaago</a></h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, possimus nostrum!</p>
                 <div class="product-bottom-details">
                     <div class="product-price">
-                        <small>$96.00</small>$230.99
+                        <small>৳ 96.00</small>৳ 230.99
                     </div>
                     <div class="product-links">
                         <a href=""><i class="fa fa-heart"></i></a>
@@ -113,15 +113,15 @@
         <div class="product-card">
             <div class="badge">Hot</div>
             <div class="product-tumb">
-                <img src="https://i.imgur.com/xdbHo4E.png" alt="">
+                <img src="../static/images/header-img-6.jpg" alt="">
             </div>
             <div class="product-details">
-                <span class="product-catagory">Women,bag</span>
-                <h4><a href="#">Women leather bag</a></h4>
+                <span class="product-catagory">Savar,Education</span>
+                <h4><a href="#">IHF Zaakat Campaign</a></h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, possimus nostrum!</p>
                 <div class="product-bottom-details">
                     <div class="product-price">
-                        <small>$96.00</small>$230.99
+                        <small>৳ 96.00</small>৳ 230.99
                     </div>
                     <div class="product-links">
                         <a href=""><i class="fa fa-heart"></i></a>
@@ -133,15 +133,15 @@
         <div class="product-card">
             <div class="badge">Hot</div>
             <div class="product-tumb">
-                <img src="https://i.imgur.com/xdbHo4E.png" alt="">
+                <img src="../static/images/header-img-7.jpg" alt="">
             </div>
             <div class="product-details">
-                <span class="product-catagory">Women,bag</span>
+                <span class="product-catagory">/,bag</span>
                 <h4><a href="#">Women leather bag</a></h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, possimus nostrum!</p>
                 <div class="product-bottom-details">
                     <div class="product-price">
-                        <small>$96.00</small>$230.99
+                        <small>৳ 96.00</small>৳ 230.99
                     </div>
                     <div class="product-links">
                         <a href=""><i class="fa fa-heart"></i></a>
