--- a/amardaan/static/css/campaign_list.css
+++ b/amardaan/static/css/campaign_list.css
@@ -21,6 +21,7 @@ a {
 hr{
     border-top: 1px dotted rgb(169, 165, 165);
 }
+
 .products-container {
     width: 100;
     display: flex;
@@ -30,14 +31,13 @@ hr{
 }
 
 .product-card {
-    width: 380px;
+    width: 350px;
     border-radius: 10px;
     position: relative;
     box-shadow: 0 2px 7px #dfdfdf;
     margin: 50px auto;
     background: #fafafa;
 }
-
 .badge {
     position: absolute;
     left: 0;
@@ -48,8 +48,8 @@ hr{
     background: red;
     color: #fff;
     padding: 3px 10px;
+    z-index: 1;
 }
-
 .product-tumb {
     border-radius: 10px 10px 0px 0px;
     display: flex;
@@ -58,12 +58,15 @@ hr{
     height: 300px;
     padding: 50px;
     background: #f0f0f0;
+    
 }
 
 .product-tumb img {
-    max-width: 100%;
-    max-height: 100%;
-    
+    width: 100%;
+    height: 100%;
+    transform: scale(1.2);
+    object-fit: cover;
+    border-radius: 10px;
 }
 
 .product-details {
