--- a/amardaan/templates/campaign_list.html
+++ b/amardaan/templates/campaign_list.html
@@ -8,17 +8,34 @@
     <h4>AmarDaan helps you raise money for what matters to you most</h4>
     <hr>
 </div>
+<div class="query-filters">
+    <div class="filter-section">
+        <label for="filter">Explore &nbsp; </label>
+        <select id="filter" name="filter">
+            <option value="1">Getting Funded</option>
+            <option value="2">Newest</option>
+            <option value="3">Fully funded</option>
+        </select>
+    </div>
+    <div class="filter-section">
+        <label for="filter">Donation Sector &nbsp; </label>
+        <select id="filter" name="filter">
+            <option value="1">Getting Funded</option>
+            <option value="2">Newest</option>
+            <option value="3">Fully funded</option>
+        </select>
+    </div>
+</div>
 <div class="camp_container">
     <div class="products-container">
         <div class="product-card">
-            <div class="badge">Hot</div>
             <div class="product-tumb">
                 <img class="product-image" src="../static/images/header-img-1.jpg" alt="">
             </div>
             <div class="product-details">
-                <span class="product-catagory">Women,bag</span>
+                <span class="product-catagory">Ashulia, Savar</span>
                 <h4><a href="#">Run for Ratan</a></h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, possimus nostrum!</p>
+                <p>Empower change, join the 'Run for Ratan' campaign and make a lasting impact today!</p>
                 <div class="product-bottom-details">
                     <div class="product-price">
                         <small>৳ 96.00</small>৳ 230.99
@@ -31,7 +48,6 @@
             </div>
         </div>
         <div class="product-card">
-            <div class="badge">Hot</div>
             <div class="product-tumb">
                 <img src="../static/images/Mamun Formal Pic.png" alt="">
             </div>
@@ -51,7 +67,6 @@
             </div>
         </div>
         <div class="product-card">
-            <div class="badge">Hot</div>
             <div class="product-tumb">
                 <img src="../static/images/header-img-3.jpg" alt="">
             </div>
@@ -71,7 +86,6 @@
             </div>
         </div>
         <div class="product-card">
-            <div class="badge">Hot</div>
             <div class="product-tumb">
                 <img src="../static/images/header-img-4.jpg" alt="">
             </div>
@@ -91,7 +105,6 @@
             </div>
         </div>
         <div class="product-card">
-            <div class="badge">Hot</div>
             <div class="product-tumb">
                 <img src="../static/images/header-img-5.jpg" alt="">
             </div>
@@ -111,7 +124,6 @@
             </div>
         </div>
         <div class="product-card">
-            <div class="badge">Hot</div>
             <div class="product-tumb">
                 <img src="../static/images/header-img-6.jpg" alt="">
             </div>
@@ -131,7 +143,6 @@
             </div>
         </div>
         <div class="product-card">
-            <div class="badge">Hot</div>
             <div class="product-tumb">
                 <img src="../static/images/header-img-7.jpg" alt="">
             </div>
