Updated the footer section!
Expanding of the footer section to new look!

--- a/amardaan/templates/campaign_list.html
+++ b/amardaan/templates/campaign_list.html
@@ -33,7 +33,7 @@
                 <img class="product-image" src="../static/images/header-img-1.jpg" alt="">
             </div>
             <div class="product-details">
-                <span class="product-catagory">Ashulia, Savar</span>
+                <span class="product-catagory">Ashulia, Health</span>
                 <h4><a href="#">Run for Ratan</a></h4>
                 <p>Empower change, join the 'Run for Ratan' campaign and make a lasting impact today!</p>
                 <div class="product-bottom-details">
@@ -52,7 +52,7 @@
                 <img src="../static/images/Mamun Formal Pic.png" alt="">
             </div>
             <div class="product-details">
-                <span class="product-catagory">Women,bag</span>
+                <span class="product-catagory">Birulia,Education</span>
                 <h4><a href="#">Music for hunger</a></h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, possimus nostrum!</p>
                 <div class="product-bottom-details">
