--- a/AmarDaan/templates/base.html
+++ b/AmarDaan/templates/base.html
@@ -6,6 +6,7 @@
   <title>{% block title %}AmarDaan | Empowering Dreams, Transforming Lives{% endblock %}</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/footer.css')}}">
+
   {% block link %}
   <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='css/style.css') }}">
   {% endblock %}
@@ -79,8 +80,92 @@
         </script>
       {% block script %}{% endblock %}
 </body>
-<footer>
-  <p>All rights reserved <i class="fa fa-heart"></i> by <a target="_blank" href="https://www.fb.com/mkmamun111">AmarDaan</a></p>
+<footer class="footer-section">
+  <div class="container">
+      <div class="footer-cta pt-5 pb-5">
+          <div class="row">
+              <div class="col-xl-4 col-md-4 mb-30">
+                  <div class="single-cta">
+                      <i class="fas fa-map-marker-alt"></i>
+                      <div class="cta-text">
+                          <h4>Find us</h4>
+                          <span>Daffodil Smart City, Birulia, Savar, Dhaka</span>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-xl-4 col-md-4 mb-30">
+                  <div class="single-cta">
+                      <i class="fas fa-phone"></i>
+                      <div class="cta-text">
+                          <h4>Call us</h4>
+                          <span><a href='tel:01643091606'>01643-091606</a></span>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-xl-4 col-md-4 mb-30">
+                  <div class="single-cta">
+                      <i class="far fa-envelope-open"></i>
+                      <div class="cta-text">
+                          <h4>Mail us</h4>
+                          <span>amardaan247@gmail.com</span>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+      <div class="footer-content pt-5 pb-5">
+        <div class="row">
+            <div class="col-xl-4 col-lg-4 mb-50">
+                <div class="footer-widget">
+                    <div class="footer-logo">
+                        <a href="index.html"><img src="../static/images/logo.png" class="img-fluid" alt="logo"></a>
+                    </div>
+                    <div class="footer-text">
+                        <p>Empowering Bangladesh through Online Crowdfunding. Initiating campaigns for effective change. Join us in creating a better future through the simplicity of generosity. Together, we make a difference. Join AmarDaan today.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xl-4 col-lg-4 col-md-6 mb-30">
+                <div class="footer-widget">
+                    <div class="footer-widget-heading">
+                        <h3>Useful Links</h3>
+                    </div>
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">about</a></li>
+                        <li><a href="#">services</a></li>
+                        <li><a href="#">Contact</a></li>
+                        <li><a href="#">About us</a></li>
+                        <li><a href="#">Our Services</a></li>
+                        <li><a href="#">Contact us</a></li>
+                        <li><a href="#">Latest News</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-xl-4 col-lg-4 col-md-6 mb-50">
+                <div class="footer-widget">
+                    <div class="footer-widget-heading">
+                        <h3>Subscribe</h3>
+                    </div>
+                    <div class="footer-text mb-25">
+                        <p>Don’t miss to subscribe to our new feeds, kindly fill the form below.</p>
+                    </div>
+                    <div class="subscribe-form">
+                        <form action="#">
+                            <input type="text" placeholder="Email Address">
+                            <button><svg xmlns="http://www.w3.org/2000/svg" height="2em" viewBox="0 0 448 512"style="fill: #ffff"><path d="M446.7 98.6l-67.6 318.8c-5.1 22.5-18.4 28.1-37.3 17.5l-103-75.9-49.7 47.8c-5.5 5.5-10.1 10.1-20.7 10.1l7.4-104.9 190.9-172.5c8.3-7.4-1.8-11.5-12.9-4.1L117.8 284 16.2 252.2c-22.1-6.9-22.5-22.1 4.6-32.7L418.2 66.4c18.4-6.9 34.5 4.1 28.5 32.2z"/></svg></button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="copyright-area">
+            <div class="col-xl-6 col-lg-6 text-center">
+                <div class="copyright-text">
+                    <p>Copyright &copy; 2023, All Right Reserved <a href="https://github.com/MamunKhan71">Md. Mamun</a></p>
+            </div>
+    </div>
+</div>
 </footer>
-
-</html>
