Added Terms and Conditions Page!
Completed the terms and conditions page.

--- a/AmarDaan/templates/base.html
+++ b/AmarDaan/templates/base.html
@@ -28,7 +28,7 @@
           <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav" style="height: 60px;">
               <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
+                <a class="nav-link" href="{{url_for('views.privacy_policy')}}">Privacy Policy</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="{{url_for('views.campaign_list')}}">Campaigns</a>
@@ -164,7 +164,7 @@
 <div class="copyright-area">
             <div class="col-xl-6 col-lg-6 text-center">
                 <div class="copyright-text">
-                    <p>Copyright &copy; 2023, All Right Reserved <a href="https://github.com/MamunKhan71">Md. Mamun</a></p>
+                    <p>Copyright &copy; 2023, All Right Reserved | <a href="https://github.com/MamunKhan71">Md. Mamun</a></p>
             </div>
     </div>
 </div>
