--- a/amardaan/templates/campaign_list.html
+++ b/amardaan/templates/campaign_list.html
@@ -19,15 +19,13 @@
     </div>
     <div class="filter-section">
         <label for="filter">Donation Sector &nbsp; </label>
-        <select id="filter" name="filter">
-            <option value="1">Getting Funded</option>
-            <option value="2">Newest</option>
-            <option value="3">Fully funded</option>
+        <select id="category" name="filter">
         </select>
     </div>
 </div>
 <div class="camp_container">
     <div class="products-container">
+        <!-- Your product cards go here -->
         <div class="product-card">
             <div class="product-tumb">
                 <img class="product-image" src="../static/images/header-img-1.jpg" alt="">
@@ -161,8 +159,106 @@
                 </div>
             </div>
         </div>
-    
+        <div class="product-card">
+            <div class="product-tumb">
+                <img src="../static/images/header-img-7.jpg" alt="" >
+            </div>
+            <div class="product-details">
+                <span class="product-catagory">/,bag</span>
+                <h4><a href="#">Women leather bag</a></h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, possimus nostrum!</p>
+                <div class="product-bottom-details">
+                    <div class="product-price">
+                        <small>৳ 96.00</small>৳ 230.99
+                    </div>
+                    <div class="product-links">
+                        <a href=""><i class="fa fa-heart"></i></a>
+                        <a href=""><i class="fa fa-shopping-cart"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Add more product cards as needed -->
+
+    </div>
+    <div class="load-more">
+        <button id="loadMore">Show More</button>
+    </div>
+    <div class="totop">
+        <a href="#top">Back to Top</a>
     </div>
 </div>
 
+
+
+{% block script %}
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script>
+    $(function () {
+        $("div.product-card").slice(0, 4).show(); // Show the first 4 product cards
+        $("#loadMore").on('click', function (e) {
+            e.preventDefault();
+            $("div.product-card:hidden").slice(0, 4).slideDown(); // Show the next 4 hidden product cards
+            if ($("div.product-card:hidden").length == 0) {
+                $("#loadMore").fadeOut('slow'); // If there are no more hidden cards, hide the "Show More" button
+            }
+            $('html,body').animate({
+                scrollTop: $(this).offset().top
+            }, 1500);
+            if ($("div.product-card:last").css('display') == 'block') {
+                $('#loadMore').hide();
+                $('.totop').show();
+            }
+        });
+    });
+
+    $('a[href=#top]').click(function () {
+        $('body,html').animate({
+            scrollTop: 0
+        }, 600);
+        return false;
+    });
+
+    $(window).scroll(function () {
+        if ($(this).scrollTop() > 50) {
+            $('.totop a').fadeIn();
+        } else {
+            $('.totop a').fadeOut();
+        }
+    });
+</script>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script>
+    const donationCategories = [
+        { value: 'health', label: 'Health'},
+        { value: 'education', label: 'Education' },
+        { value: 'environment', label: 'Environment' },
+        { value: 'poverty', label: 'Poverty' },
+        { value: 'disaster', label: 'Disaster' },
+        { value: 'community', label: 'Community' },
+        { value: 'animals', label: 'Animals' },
+        { value: 'arts', label: 'Arts' },
+        { value: 'rights', label: 'Rights' },
+        { value: 'technology', label: 'Technology' },
+        { value: 'hunger', label: 'Hunger' },
+        { value: 'water', label: 'Water' },
+        { value: 'elderly', label: 'Elderly' },
+        { value: 'mental-health', label: 'Mental Health' },
+        { value: 'refugees', label: 'Refugees' }
+    ];
+
+    function populateCategories() {
+        const selectElement = document.getElementById('category');
+
+        donationCategories.forEach(category => {
+            const option = document.createElement('option');
+            option.value = category.value;
+            option.text = category.label;
+            selectElement.appendChild(option);
+        });
+    }
+
+    populateCategories();
+</script>
+{% endblock %}
 {% endblock %}
