--- a/amardaan/templates/privacy_policy.html
+++ b/amardaan/templates/privacy_policy.html
@@ -24,7 +24,7 @@
         <br>
         <h6>Security:</h6>
         <ul>
-            <li><p>Maintain confidentiality of Your username, customer ID, and password</p></li>
+            <li><p>Maintain confidentiality of Your username, customer ID, and password.</p></li>
             <li><p>Do not attempt to bypass Our user authentication systems.</p></li>
             <li><p>Immediately report any unauthorized account usage or security breaches.</p></li>
             <li>Assume full responsibility for all account-related activities and payments.<p></p></li>
@@ -65,8 +65,8 @@
         </ul>
     </br>
     <br>
-    <h6><i>Note: The above Terms and Conditions are effective as of the specified date. AmarDaan.org reserves the right to modify these Terms at any time. It is recommended to regularly review this Agreement for updates.</i></h6><br>
-    <h6 style="text-align: center;">[ By using AmarDaan.org and its services, You acknowledge that You have read, understood, and agree to be bound by these Terms and Conditions ]</h6>
+    <h6 style="color: #b8b6b6"><i>Note: The above Terms and Conditions are effective as of the specified date. AmarDaan.org reserves the right to modify these Terms at any time. It is recommended to regularly review this Agreement for updates.</i></h6><br>
+    <h6 style="text-align: center;">- By using AmarDaan.org and its services, You acknowledge that You have read, understood, and agree to be bound by these Terms and Conditions -</h6>
     
 </div>
         
