--- a/amardaan/static/css/campaign.css
+++ b/amardaan/static/css/campaign.css
@@ -327,3 +327,35 @@ span {
 f-div.active{
     display: block;
 }
+.overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(181, 181, 181, 0.5);
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+}
+
+/* Style for the alert box */
+.alert-box {
+    background: #fff;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    text-align: center;
+}
+
+/* Style for the close button */
+.close-btn {
+    background: #007BFF;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+</style>
