--- a/amardaan/templates/campaign_details.html
+++ b/amardaan/templates/campaign_details.html
@@ -408,7 +408,7 @@
                     </div>
                   </div>
                 </div>
-                <a href="{{url_for('views.get_ssl_session')}}" class="GA4-single-donate-now">
+                <a href="{{url_for('views.donation_page')}}"" class="GA4-single-donate-now">
                   <button type="button" class="donate-btn bttn lg-btn pri">
                     DONATE NOW
                   </button>
@@ -467,7 +467,7 @@
         </button>
       </li>
       <li class="list-inline-item p-0 m-0">
-        <a href="{{url_for('views.get_ssl_session')}}" class="asidebtn act-btn GA4-single-donate-now" onclick="if (!window.__cfRLUnblockHandlers) return false; ga('send', 'event', 'Donate', 'click', 'donate-top-btn');">
+        <a href="{{url_for('views.donation_page')}}" class="asidebtn act-btn GA4-single-donate-now" onclick="if (!window.__cfRLUnblockHandlers) return false; ga('send', 'event', 'Donate', 'click', 'donate-top-btn');">
           <button type="button" class="donate-btn bttn md-btn pri">
             DONATE NOW
           </button>
