--- a/amardaan/templates/donation_page.html
+++ b/amardaan/templates/donation_page.html
@@ -42,7 +42,7 @@
                     <span class="checkbox-text">Yes, please email me updates on this campaign's progress</span>
                 </label>
             </div>
-            <button class="donations__reset" type="submit" value="submit">Proceed to Checkout</button>
+            <button class="donations__reset" type="submit" value="submit" onclick="window.location.href='{{url_for('views.get_ssl_session')}}'">Proceed to Checkout</button>
         </form>
         <p class="P11 text-center privacy-term-text">By continuing you are agreeing to GoGetFunding's <span class="link"><a href="#">&nbsp; terms &nbsp;</a></span> and<span class="link"><a href="#"> &nbsp; privacy policy</a></span>.</p>
 
