--- a/AmarDaan/templates/base.html
+++ b/AmarDaan/templates/base.html
@@ -135,7 +135,7 @@
                         <li><a href="#">about</a></li>
                         <li><a href="#">services</a></li>
                         <li><a href="#">Contact</a></li>
-                        <li><a href="#">About us</a></li>
+                        <li><a href="{{url_for('views.about_us')}}">About us</a></li>
                         <li><a href="#">Our Services</a></li>
                         <li><a href="#">Contact us</a></li>
                         <li><a href="#">Latest News</a></li>
