--- a/AmarDaan/templates/add_campaign.html
+++ b/AmarDaan/templates/add_campaign.html
@@ -1,62 +1,42 @@
 {% extends 'statistics.html' %}
 {% block header %}
     <link rel="stylesheet" href="../static/css/add_campaign.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 {% endblock %}
 {% block maincontent %}
     <h1>Fundraising Categories</h1>
-    <div class="campaign_table">
-        <div class="table-responsive">
-            <table class="table table-bordered table-striped">
-                <thead class="thead-dark">
+   <div class="campaign_table">
+    <div class="table-responsive">
+        <table>
+            <thead style="background-color: #343a40; color: #fff;">
+                <tr>
+                    <th>#</th>
+                    <th>ID</th>
+                    <th>Campaign Name</th>
+                    <th>Status</th>
+                    <th>Action</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for campaign in campaigns %}
                     <tr>
-                        <th scope="col">#</th>
-                        <th scope="col">Category</th>
-                        <th scope="col">Campaign Name</th>
-                        <th scope="col">Description</th>
-                        <th scope="col">Target Amount</th>
-                        <th scope="col">Deadline</th>
-                        <th scope="col">Banner</th>
-                        <th scope="col">Status</th>
-                        <th scope="col">Action</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <th scope="row">1</th>
-                        <td>Category 1</td>
-                        <td>Campaign 1</td>
-                        <td>Description 1</td>
-                        <td>Php 50,000.00</td>
-                        <td>Oct 30, 2021</td>
-                        <td><img src="assets/img/banner1.jpg" width="100" alt="Banner 1"></td>
-                        <td><span class="badge bg-success">approve</span></td>
+                        <th scope="row">{{ campaign.id }}</th>
+                        <td>{{ campaign.camp_id }}</td>
+                        <td>{{ campaign.camp_name }}</td>
+                        <td>{{ campaign.camp_status }}</td>
                         <td class="text-right">
-                            <a class="btn btn-sm btn-success" href="#" data-toggle="modal" data-target="#edit"><i
-                                class="fa fa-user-edit">Update</i></a>
-                            <a class="btn btn-sm btn-danger" href="#" data-toggle="modal" data-target="#delete"><i
-                                class="fa fa-trash-alt">Delete</i></a>
+                           <a class="btn btn-danger" href="{{ url_for('views.delete_campaign', campaign_id=campaign.id) }}" data-toggle="modal" data-target="#delete">Delete</a>
                         </td>
                     </tr>
-                    <tr>
-                        <th scope="row">2</th>
-                        <td>Category 2</td>
-                        <td>Campaign 2</td>
-                        <td>Description 2</td>
-                        <td>Php 100,000.00</td>
-                        <td>Nov 30, 2021</td>
-                        <td><img src="assets/img/banner2.jpg" width="100" alt="Banner 2"></td>
-                        <td><span class="badge bg-success">approve</span></td>
-                        <td class="text-right">
-                            <a class="btn btn-sm btn-success" href="#" data-toggle="modal" data-target="#edit"><i
-                                class="fa fa-user-edit">Update</i></a>
-                            <a class="btn btn-sm btn-danger" href="#" data-toggle="modal" data-target="#delete"><i
-                                class="fa fa-trash-alt">Delete</i></a>
-                        </td>
-                    </tr>
-                    <!-- Add more rows as needed -->
-                </tbody>
-            </table>
+                {% endfor %}
+
+            </tbody>
+        </table>
+        <div class="custom-button-container">
+            <a class="btn custom-button" href="{{ url_for('views.add_new_campaign') }}">Add Campaign Category</a>
         </div>
+
+
     </div>
+</div>
+
 {% endblock %}
